# gst-plugin-local

./: COPYING  ChangeLog  README  configure.ac
src/: Makefile.am  NOTES  gstlocal.c  gstlocalsink.c  gstlocalsink.h  gstlocalsurface.c  gstlocalsurface.h
tools/: inspect-localsink.sh  list-plugins.sh  test-localsink.sh
